--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vietnamese Baka</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #0d1117;
+      color: #c9d1d9;
+      text-align: center;
+      padding: 100px 20px;
+    }
+    h1 {
+      font-size: 3em;
+      color: #58a6ff;
+    }
+    p {
+      font-size: 1.2em;
+    }
+    a {
+      color: #8b949e;
+      text-decoration: none;
+    }
+    a:hover {
+      color: #58a6ff;
+    }
+  </style>
 </head>
 <body>
-  <h1>Hello World!</h1>
-  <p>This is my first GitHub Pages site.</p>
+  <h1>🇻🇳 Vietnamese Baka</h1>
+  <p>Welcome to my GitHub Pages site!</p>
+  <p>More content coming soon...</p>
+  <p><a href="https://github.com/realOSAKER">Visit my GitHub</a></p>
 </body>
 </html>
