--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <section class="cards">
       <div class="card">
         <img src="roblox.png" alt="Roblox Game Screenshot">
-        <p>Here's a peek at one of the Roblox games I've worked on. I love combining Lua scripts and creativity to make fun experiences!</p>
+        <p>Here's a peek at one of the Roblox games I've worked on.</p>
       </div>
       <div class="card">
         <iframe height="215" src="https://www.youtube.com/embed/Ap9llly8iy8" title="YouTube Tutorial" frameborder="0" allowfullscreen></iframe>
