--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body>
   <header>
     <h1>Vietnamese Baka</h1>
-    <p>Cybersecurity nerd & Roblox scripter — building worlds, teaching code 🧠🎮</p>
+    <p>y'all need to touch GRASS, get a JOBBBBBB 😭</p>
     <nav>
       <a href="index.html">About Me</a>
       <a href="/studio">Studio</a>
