--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     :root {
-      --main-blue: #3b82f6;
-      --light-blue: #e0f2fe;
-      --deep-blue: #1e40af;
-      --white: #ffffff;
-      --gradient-blue: linear-gradient(to right, #60a5fa, #3b82f6, #2563eb);
+      --dark-bg: #1e293b;
+      --dark-panel: #1f2937;
+      --text-light: #f8fafc;
+      --text-muted: #94a3b8;
+      --accent: #60a5fa;
+      --accent-dark: #2563eb;
     }
 
     * {
@@ -23,20 +24,20 @@
 
     body {
       font-family: 'Fredoka', sans-serif;
-      background: linear-gradient(to bottom right, var(--light-blue), var(--white));
-      color: var(--deep-blue);
+      background: linear-gradient(to bottom right, var(--dark-bg), #111827);
+      color: var(--text-light);
     }
 
     header {
-      background: var(--gradient-blue);
-      padding: 2rem;
+      background: linear-gradient(135deg, #334155, var(--accent-dark));
+      padding: 3rem 1rem;
       text-align: center;
-      color: var(--white);
+      color: white;
       position: relative;
     }
 
     header h1 {
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       margin-bottom: 0.5rem;
       animation: floatIn 0.9s ease-out;
     }
@@ -55,17 +56,17 @@
     }
 
     nav a {
-      color: var(--white);
+      color: var(--text-light);
       text-decoration: none;
       font-weight: bold;
       padding: 0.5rem 1rem;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.15);
+      background: rgba(255, 255, 255, 0.1);
       transition: all 0.3s ease;
     }
 
     nav a:hover {
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(255, 255, 255, 0.25);
     }
 
     main {
@@ -77,9 +78,9 @@
     .hero {
       text-align: center;
       padding: 2rem;
-      background-color: var(--white);
+      background-color: var(--dark-panel);
       border-radius: 1.5rem;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
       animation: fadeIn 1s ease-in;
     }
 
@@ -87,12 +88,13 @@
       width: 160px;
       border-radius: 50%;
       margin-top: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
     }
 
     .hero p {
       font-size: 1.1rem;
       margin-top: 1.2rem;
+      color: var(--text-light);
     }
 
     .cards {
@@ -103,11 +105,11 @@
     }
 
     .card {
-      background-color: var(--white);
+      background-color: var(--dark-panel);
       padding: 1.5rem;
       border-radius: 1.2rem;
       text-align: center;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+      box-shadow: 0 6px 18px rgba(0,0,0,0.25);
       transition: transform 0.3s ease;
     }
 
@@ -115,15 +117,15 @@
       transform: translateY(-5px);
     }
 
-    .card img {
+    .card img,
+    .card iframe {
       width: 100%;
       border-radius: 1rem;
       margin-bottom: 1rem;
     }
 
-    .card iframe {
-      width: 100%;
-      border-radius: 1rem;
+    .card p {
+      color: var(--text-muted);
     }
 
     @keyframes fadeIn {
@@ -140,7 +142,9 @@
       margin-top: 4rem;
       text-align: center;
       font-size: 0.9rem;
-      color: #64748b;
+      color: var(--text-muted);
+      background-color: #0f172a;
+      padding: 2rem;
     }
 
     @media (max-width: 768px) {
