--- a/studio.html
+++ b/studio.html
@@ -37,8 +37,30 @@
 
     header h1 {
       font-size: 3.2rem;
-      margin: 0;
+      margin-bottom: 1rem;
       animation: fadeInDown 1s ease-in-out;
+    }
+
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+    }
+
+    nav a {
+      color: #f8fafc;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 0.5rem 1rem;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.1);
+      transition: all 0.3s ease;
+    }
+
+    nav a:hover {
+      background: rgba(255, 255, 255, 0.25);
     }
 
     @keyframes fadeInDown {
@@ -121,6 +143,11 @@
 <body>
   <header>
     <h1>My Game Studio</h1>
+    <nav>
+      <a href="index.html">About Me</a>
+      <a href="/studio">Studio</a>
+      <a href="/contact">Contact</a>
+    </nav>
   </header>
 
   <main>
