--- a/contact.html
+++ b/contact.html
@@ -61,36 +61,55 @@
       padding: 2.5rem;
       border-radius: 1.2rem;
       box-shadow: 0 10px 25px rgba(0,0,0,0.4);
+      animation: fadeIn 1s ease-in;
     }
 
     .contact-box h2 {
-      font-size: 2rem;
+      font-size: 2.2rem;
       color: #60a5fa;
       margin-bottom: 1.5rem;
     }
 
     .contact-box p {
-      font-size: 1.1rem;
+      font-size: 1.15rem;
       color: #cbd5e1;
-      margin-bottom: 2rem;
+      margin-bottom: 2.5rem;
     }
 
     .contact-links {
       display: flex;
       flex-direction: column;
-      gap: 1rem;
+      gap: 1.2rem;
       font-size: 1.1rem;
     }
 
-    .contact-links a {
-      color: #f1f5f9;
+    .contact-links a,
+    .contact-links span {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5rem;
+      padding: 0.75rem 1.25rem;
+      background: rgba(255, 255, 255, 0.05);
+      border-radius: 999px;
       text-decoration: none;
-      display: inline-block;
-      transition: color 0.3s;
+      color: #f1f5f9;
+      transition: all 0.3s ease;
     }
 
-    .contact-links a:hover {
+    .contact-links a:hover,
+    .contact-links span:hover {
+      background-color: rgba(96, 165, 250, 0.15);
       color: #60a5fa;
+    }
+
+    .contact-links i {
+      font-size: 1.2rem;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     footer {
