--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
   </main>
 
   <footer>
-    © 2025 Vietnamese Baka. All rights reserved.
+    © 2025 Vietnamese Baka. Built with ❤️ & Lua.
   </footer>
 </body>
 </html>
