Update contact information and footer text

--- a/contact.html
+++ b/contact.html
@@ -138,14 +138,14 @@
       <p>If you wanna collab or just say hello, contact me 👇</p>
       <div class="contact-links">
         <a href="mailto:toukoire1@gmail.com"><i class="fas fa-envelope"></i> toukoire1@gmail.com</a>
-        <a href="https://www.youtube.com/@VietnameseBaka3.01" target="_blank"><i class="fab fa-youtube"></i> YouTube: Vietnamese Baka</a>
+        <a href="https://www.youtube.com/@VuBakaRoblox" target="_blank"><i class="fab fa-youtube"></i> YouTube: Vũ Baka Roblox</a>
         <span><i class="fab fa-discord"></i> Discord: toukoire1</span>
       </div>
     </div>
   </main>
 
   <footer>
-    © 2025 Vietnamese Baka. Built with ❤️ & Lua.
+    © 2025 Vu Baka. Built with ❤️ & Lua.
   </footer>
 </body>
 </html>
