Update footer copyright name from Vietnamese Baka to Vu Baka

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </main>
 
   <footer>
-    © 2025 Vietnamese Baka. Built with ❤️ & Lua.
+    © 2025 Vu Baka. Built with ❤️ & Lua.
   </footer>
 </body>
 </html>
