--- a/studio.html
+++ b/studio.html
@@ -177,7 +177,7 @@
   </main>
 
   <footer>
-    © 2025 Vietnamese Baka. Built with ❤️ & Lua.
+    © 2025 Vu Baka. Built with ❤️ & Lua.
   </footer>
 </body>
 </html>
